BUGFIX: double border

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -23,9 +23,6 @@ border-color: #e83e8c;
 border: solid 1px #fff;
 }
 /* menu */
-#header nav ul li {
-border-left: solid 1px #fff;
-}
 #header nav ul {
 border: solid 1px #fff;
 }
